<?xml version="1.0"?>
<package>
  <name>barrett_ft_sensor</name>
  <version>0.0.0</version>
  <description>The barrett_ft_sensor package</description>

  <maintainer email="dawid.seredynski@gmail.com">Dawid Seredynski</maintainer>
  <license>BSD</license>

  <author>Dawid Seredynski</author>

  <url>https://github.com/RCPRG-ros-pkg/barrett_hand</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ocl</build_depend>
  <build_depend>rtt</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rtt_rosclock</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>ocl</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_rosnode</run_depend> 
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rtt_geometry_msgs</run_depend>
  <run_depend>std_srvs</run_depend> 
  <run_depend>rtt_std_srvs</run_depend> 
  <run_depend>kdl_parser</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rtt_ros>
      <plugin_depend>rtt_rosnode</plugin_depend>
      <plugin_depend>rtt_roscomm</plugin_depend>
      <plugin_depend>rtt_geometry_msgs</plugin_depend>
      <plugin_depend>rtt_std_srvs</plugin_depend>
    </rtt_ros>
  </export>
</package>
