<package>
  <name>barrett_hand_hw_sim</name>
  <version>0.0.1</version>
  <description>	Simulation plugin and launch scripts for Velma.</description>
  <maintainer email="dawid.seredynski@gmail.com">Dawid Seredynski</maintainer>

  <license>BSD</license>

  <author>Dawid Seredynski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>orocos_kdl</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>lwr_msgs</build_depend>
  <build_depend>rtt_actionlib</build_depend>
  <build_depend>barrett_hand_common</build_depend>
  <build_depend>barrett_hand_controller_msgs</build_depend>
  <build_depend>subsystem_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>common_behavior</build_depend>
  <build_depend>test_ec_msgs_gen</build_depend>
  <build_depend>shm_comm</build_depend>
  <build_depend>common_interfaces</build_depend>
  <build_depend>ec_can_queue</build_depend>
  <build_depend>barrett_hand_controller</build_depend>


  <run_depend>barrett_hand_controller_msgs</run_depend>

  <build_depend>velma_core_ve_re_lwr_msgs</build_depend>
  <run_depend>velma_core_ve_re_lwr_msgs</run_depend>
  
  <run_depend>orocos_kdl</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>lwr_msgs</run_depend>
  <run_depend>barrett_hand_common</run_depend>
  <run_depend>subsystem_msgs</run_depend>
  <run_depend>common_behavior</run_depend>
  <run_depend>test_ec_msgs_gen</run_depend>
  <run_depend>shm_comm</run_depend>
  <run_depend>common_interfaces</run_depend>
  <run_depend>ec_can_queue</run_depend>
  <run_depend>barrett_hand_controller</run_depend>

  <export>
    <rtt_ros>
      <!-- Plugin deps are loaded automatically by the rtt_ros import service -->
      <plugin_depend>rtt_std_msgs</plugin_depend>
      <plugin_depend>rtt_lwr_msgs</plugin_depend>
      <plugin_depend>velma_data_conversions</plugin_depend>
      <plugin_depend>rtt_velma_core_ve_re_lwr_subsystem_ports</plugin_depend>
      <plugin_depend>rtt_velma_core_ve_re_lwr_msgs</plugin_depend>
    </rtt_ros>
  </export>

</package>
