<?xml version="1.0"?>
<package>
  <name>barrett_hand_tactile</name>
  <version>0.0.0</version>
  <description>The barrett_hand_controller package</description>

  <maintainer email="dawid.seredynski@gmail.com">Dawid Seredynski</maintainer>
  <license>BSD</license>

  <author>Dawid Seredynski</author>

  <url>http://ros.org/wiki/barrett_hand_controller</url>
  
  <buildtool_depend>catkin</buildtool_depend>

<!--  <build_depend>genmsg</build_depend>-->
  <build_depend>ocl</build_depend>
  <build_depend>rtt</build_depend>
  <build_depend>rtt_roscomm</build_depend>
  <build_depend>rtt_sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rtt_rosclock</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>barrett_hand_controller_msgs</build_depend>
  <build_depend>rtt_actionlib</build_depend>
  <build_depend>can_driver</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>ocl</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_rosnode</run_depend> 
  <run_depend>rtt_roscomm</run_depend>
  <run_depend>rtt_sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rtt_std_msgs</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
  <run_depend>std_srvs</run_depend> 
  <run_depend>rtt_std_srvs</run_depend> 
  <run_depend>rtt_barrett_hand_controller_msgs</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>can_driver</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rtt_ros>
      <plugin_depend>rtt_rosnode</plugin_depend>
      <plugin_depend>rtt_roscomm</plugin_depend>
      <plugin_depend>rtt_sensor_msgs</plugin_depend>
      <plugin_depend>rtt_std_msgs</plugin_depend>
      <plugin_depend>rtt_std_srvs</plugin_depend>
      <plugin_depend>rtt_barrett_hand_controller_msgs</plugin_depend>
    </rtt_ros>
  </export>
</package>
